--- a/three/report/Assignment3_Group4.tex
+++ b/three/report/Assignment3_Group4.tex
@@ -12,9 +12,12 @@
 \setcounter{tocdepth}{5}
 %\usepackage{soul}
 
+
 \usepackage[backend=bibtex]{biblatex}
 \addbibresource{bibliography.bib}
 
+
+\newcommand{\red}[1]{\textbf{\color{red}{#1}}}
 
 \newcommand{\tab}{\hspace{10mm}}
 \newcommand{\dtab}{\hspace{20mm}}
