--- a/three/report/ind_q_analysis.tex
+++ b/three/report/ind_q_analysis.tex
@@ -42,21 +42,26 @@ The table \ref{table:2vs1} shows the average number of rounds the predators need
 As the table shows, the predators learn to catch the prey quicker over time.
 
 \subsubsection{3 predators versus 1 prey}
-With four agents on the grid, the implementation became very slow. It was possible to run the implementation, but as it is very slow, the parameter changes have not been tested. However, figure -some-reference- shows the results of running three predators versus one prey. Due to time constraints and the amount of time it takes for the algorithm to calculate the all the states, this was for 1000 episodes. Contrary to the other testing approaches, this test was run once and so not averaged over several experiments.
+With four agents on the grid, the implementation became very slow. It was possible to run the implementation, but as it is very slow, the parameter changes have not been tested. However, figure \ref{graph:3vs1} shows the results of running three predators versus one prey. Due to time constraints and the amount of time it takes for the algorithm to calculate the all the states, this was for 1000 episodes. Contrary to the other testing approaches, this test was run once and so not averaged over several experiments.
 
 \begin{center}
 	\includegraphics[scale=0.3]{3_predators_3_ex_1000_runs_q-learning}
 	\captionof{figure}{Independent Q-learning: 3 predators vs. 1 prey}
+	\label{graph:3vs1}
 \end{center}
 
-This figure shows that the predators lose the game a lot. This is interesting as it is expected of the predators to learn not to bump into one another. However, the grid is both toroidal as well as small and the prey learns. It is possible that the prey learning, combined with a small, toroidal grid, leads to the predators bumping into one another. Perhaps the prey learns to trick the predators into bumping into one another. Therefore, it is interesting to see what happens if the prey learns slower than the predators. By making the prey learn slower, theoretically it is possible for the predators to learn not to bump into one another and catch the prey. In order to simulate this, the predators learn as stated in default, but the prey learns with a learning rate of 0.01. These results are shown in the next figure.
+
+\newcommand{\labelerrorfootnote}{\footnote{Due to a labeling error during test execution, the title which appears on the figure itself does not match the one under the figure. The one under the figure is the correct one and the figure does reflect the results for 3 predators vs. 1 prey.}}
+
+Figure \ref{graph:3vs1} shows that the predators lose the game a lot.\labelerrorfootnote \: This is interesting as it is expected of the predators to learn not to bump into one another. However, the grid is both toroidal as well as small and the prey learns. It is possible that the prey learning, combined with a small, toroidal grid, leads to the predators bumping into one another. Perhaps the prey learns to trick the predators into bumping into one another. Therefore, it is interesting to see what happens if the prey learns slower than the predators. By making the prey learn slower, theoretically it is possible for the predators to learn not to bump into one another and catch the prey. In order to simulate this, the predators learn as stated in default, but the prey learns with a learning rate of 0.01. These results are shown in figure \ref{graph:3vs1slowprey}.
 
 \begin{center}
 	\includegraphics[scale=0.3]{smaller_learning_rate_prey}
 	\captionof{figure}{Independent Q-learning: 3 predators vs. 1 prey, slow learning prey}
+	\label{graph:3vs1slowprey}
 \end{center}
 
-The following table shows the results of the first- and last 100 wins and losses of the predators.
+Table \ref{table:3vs1} shows the results of the first- and last 100 wins and losses of the predators.
 
 \begin{table}[H]
 \begin{center}
@@ -70,16 +75,17 @@ The following table shows the results of the first- and last 100 wins and losses
 \hline
 \end{tabular}
 \caption{Average number of wins and losses by the predators with varying learning rates}
+\label{table:3vs1}
 \end{center}
 \end{table}
 
-The results in table \# show that the predators do learn to catch the prey. When the prey learns slower, the predators manage to catch the prey more often in the same amount of time. Therefore, it can be concluded that the algorithm does learn the predators to cooperate and catch the prey. This just takes many episodes.
+The results in table \ref{table:3vs1} show that the predators do learn to catch the prey. When the prey learns slower, the predators manage to catch the prey more often in the same amount of time. Therefore, it can be concluded that the algorithm does learn the predators to cooperate and catch the prey. This just takes many episodes.
 
 \subsubsection{4 predators versus 1 prey}
 Though it is implemented for four predators and one prey to be placed on the grid, this leads to implementations freezing. It is therefore conclusive to state that the program has become intractable. This could be solved by using function approximation, for example using Kanerva coding \cite{wu2009function}, where a number of \textit{prototype} state-action pairs are selected, to be used for storing Q-values for similar state-action pairs. Another possible solution is to have the predators learn \textit{together}, meaning they share a Q-value grid and learn simultaneously. However, this is not truly independent Q-learning. 
 
 \subsubsection{Parameter settings}
-It is interesting to see what happens when the parameters of the learning methods change. As the effects of parameter settings have been researched in a 1 versus. 1 scenario, it is interesting to see what is different when there are more agents on the grid. Also, as all agents now learn, the effects of these learning methods should change.
+It is interesting to see what happens when the parameters of the learning methods change. As the effects of parameter settings have been researched in a 1 vs. 1 scenario, it is interesting to see what is different when there are more agents on the grid. Also, as all agents now learn, the effects of these learning methods should change.
 
 \subsubsection{Learning rate}
 First, the effect of the learning rate is researched. As the learning rate determines to what extent the newly acquired information will override the old information, it is interesting to see what happens.
@@ -87,9 +93,10 @@ First, the effect of the learning rate is researched. As the learning rate deter
 \begin{center}
 	\includegraphics[scale=0.3]{2_predators_learning_rate_q_learning}
 	\captionof{figure}{Independent Q-learning: 2 predators vs. 1 prey, learning rate}
+	\label{graph:learningrate}
 \end{center}
 
-The graph shows that a low learning rate yields worst results. For a long time, a high learning rate yields good results, however, in the end a learning rate of 0.5 yields best results. This shows that for a long time, a lot of recent information is interesting.  Later on, however, an even balance of new and old information leads to more wins for the predator. 
+Figure \ref{graph:learningrate} shows that a low learning rate yields worst results. For a long time, a high learning rate yields good results, however, in the end a learning rate of 0.5 yields best results. This shows that for a long time, a lot of recent information is interesting.  Later on, however, an even balance of new and old information leads to more wins for the predator. 
 
 \begin{table}[H]
 \begin{center}
@@ -105,20 +112,23 @@ The graph shows that a low learning rate yields worst results. For a long time, 
 \hline
 \end{tabular}
 \caption{Average number of wins and losses by the predators with varying learning rates}
+\label{table:learningrate}
 \end{center}
 \end{table}
 
-The table shows that the lowest learning rate shows better and better results over time. This shows that in the beginning, a lot must be learned. As the game progresses, a low learning rate yields better results. This could indicate that the predators as well as the prey become predictable and so less new information has to be learned. As minimax Q-learning contains a decay in learning, perhaps this is the reason why. %this is strange.
+Table \ref{table:learningrate} shows that the lowest learning rate shows better and better results over time. This shows that in the beginning, a lot must be learned. As the game progresses, a low learning rate yields better results. This could indicate that the predators as well as the prey become predictable and so less new information has to be learned. As minimax Q-learning contains a decay in learning, perhaps this is the reason why.\red{THIS IS INDEED STRANGE!!!! }  %this is strange.  
+
 
 \subsubsection{Discount factor}
-The discount factor determines the importance of future rewards. In the previous assignment, the a high discount factor yielded best results. This means that the future reward was most important. Only the goal state yielded a reward, making reaching the goal state very important. Currently, there are two terminal states: the win state and the lose state. It is interesting to see what effect the negative rewards have on the importance of the immediate reward.
+The discount factor determines the importance of future rewards. In the previous assignment, when only one predator was learning, a high discount factor yielded best results. This means that the future reward was most important. Only the goal state yielded a reward, making reaching the goal state very important. Currently, there are two terminal states: the win state and the lose state. It is interesting to see what effect the negative rewards have on the importance of the immediate reward.
 
 \begin{center}
 	\includegraphics[scale=0.3]{2_predators_discount_factor_q_learning}
 	\captionof{figure}{Independent Q-learning: 2 predators vs. 1 prey, discount factor}
+	\label{graph:discountfactor}
 \end{center}
 
-The graph shows that for a long time, it does not matter how important the future reward is. However, eventually the graph shows that a low discount factor yields best results. This might be caused by the fact that the predators will receive a negative reward when running into another predator. In order to avoid this, winning (or not losing) immediately is more important than expected future rewards.
+Figure \ref{graph:discountfactor} shows that for a long time, it does not matter how important the future reward is. However, eventually the graph shows that a low discount factor yields best results. This might be caused by the fact that the predators will receive a negative reward when running into another predator. In order to avoid this, winning (or not losing) immediately is more important than expected future rewards.
 
 \begin{table}[H]
 \begin{center}
@@ -134,20 +144,22 @@ The graph shows that for a long time, it does not matter how important the futur
 \hline
 \end{tabular}
 \caption{Average number of predator wins and losses for varying discount factors}
+\label{table:discountfactor}
 \end{center}
 \end{table}
 
-The table shows that the discount factor has a huge impact on the success of the predators. By making sure that the predators do not run into each other, the game is not lost as often.
+Table \ref{table:discountfactor} shows that the discount factor has a huge impact on the success of the predators. By making sure that the predators do not run into each other, the game is not lost as often.
 
 \subsubsection{$\epsilon$-greedy action selection}
-In the current implementation, $\epsilon$-greedy action selection was used to find actions for the agents. For this action-selection mechanism, $\epsilon$ determines the percentage of greedy versus exploratory actions. An $\epsilon$ value of 0 selects only greedy actions. The closer this value is to 1, the more exploring actions are selected. The following figure shows the results of this test.
+In the current implementation, $\epsilon$-greedy action selection was used to find actions for the agents. For this action-selection mechanism, $\epsilon$ determines the percentage of greedy versus exploratory actions. An $\epsilon$ value of 0 selects only greedy actions. The closer this value is to 1, the more exploring actions are selected. The following figure \ref{graph:greedy} shows the results of this test.
 
 \begin{center}
 	\includegraphics[scale=0.3]{2_predators_epsilon_q_learning}
 	\captionof{figure}{Independent Q-learning: 2 predators vs. 1 prey, $\epsilon$-greedy action selection}
+	\label{graph:greedy}
 \end{center}
 
-Figure  shows that greedy action selection yields best results. This is possible, as all predators are initialized at the corners of the grid, starting out with equal distance to the prey. As the prey moves, it will be closer to one predator. Therefore, after learning and without exploration, the prey will be caught by one predator (as it tries to minimize the distance between the prey and itself). As a greedy action, in this case, leads to moving in the direction of the highest Q-value, it is still possible for the predators to bump into each other. However, it seems as if the prey is most often caught before this happens leading to wins for the predators.
+Figure \ref{graph:greedy} shows that greedy action selection yields best results. This is possible, as all predators are initialized at the corners of the grid, starting out with equal distance to the prey. As the prey moves, it will be closer to one predator. Therefore, after learning and without exploration, the prey will be caught by one predator (as it tries to minimize the distance between the prey and itself). As a greedy action, in this case, leads to moving in the direction of the highest Q-value, it is still possible for the predators to bump into each other. However, it seems as if the prey is most often caught before this happens leading to wins for the predators.
 
 \begin{table}[H]
 \begin{center}
@@ -166,8 +178,11 @@ Figure  shows that greedy action selection yields best results. This is possible
 \textbf{0.9} & 50 & 59 & 55 & 44 \\
 \hline
 \end{tabular}
-\caption{Average \# wins and losses by the predators with varying $\epsilon$-rates}
+\caption{Average number of wins and losses by the predators with varying $\epsilon$-rates}
+\label{table:greedy}
 \end{center}
 \end{table}
+
+\red{THERE SEEMS TO BE NO INFO ABOUT TABLE \ref{table:greedy}}	
 
 Though, at first, an absolute greedy policy appears to yield the most promising results, a slightly exploratory policy eventually yields the best results. This is not displayed in the graph as the wins are counted cumulatively. Eventually, the results will be best when still exploring sightly.
