report merge errors

--- a/three/report/Assignment3_Group4.tex
+++ b/three/report/Assignment3_Group4.tex
@@ -158,6 +158,9 @@ When testing the implementation or parameters, only the parameter under test cha
 \input{ind_sarsa_analysis}
 
 \subsection{Minimax Q-learning}
+
+\subsection{Policy Hill-Climbing}
+\input{phc_analysis}
 \pagebreak
 
 
