--- a/three/report/ind_sarsa_analysis.tex
+++ b/three/report/ind_sarsa_analysis.tex
@@ -45,7 +45,8 @@ It is interesting to see what happens when three predators take on one prey. As 
 	\label{graph:sarsa3vs1}
 \end{center}
 
-The graph in figure \ref{graph:sarsa3vs1} shows that the prey manages to escape most of the times. This hardly differs from independent Q-learning.
+
+The graph in figure \ref{graph:sarsa3vs1} shows that the prey manages to escape most of the times.\labelerrorfootnote \: This hardly differs from independent Q-learning.
 
 \begin{table}[H]
 \begin{center}
