--- a/three/report/ind_q_analysis.tex
+++ b/three/report/ind_q_analysis.tex
@@ -183,6 +183,31 @@ Figure \ref{graph:greedy} shows that greedy action selection yields best results
 \end{center}
 \end{table}
 
-\red{THERE SEEMS TO BE NO INFO ABOUT TABLE \ref{table:greedy}}	
+Table \ref{table:greedy} Though, at first, an absolute greedy policy appears to yield the most promising results, a slightly exploratory policy eventually yields the best results. This is not displayed in the graph as the wins are counted cumulatively. Eventually, the results will be best when still exploring sightly.
 
-Though, at first, an absolute greedy policy appears to yield the most promising results, a slightly exploratory policy eventually yields the best results. This is not displayed in the graph as the wins are counted cumulatively. Eventually, the results will be best when still exploring sightly.
+\subsubsection{Optimal settings}
+As the optimal settings have been found ($\gamma$ = 0.2, $\epsilon$ = 0.2, $\alpha$ = 0.5), two predators were unleashed against the predator. In order to maximize the result of the predators, the learning rate of the prey was also reduced to a minimum of 0.01. This lead to the results displayed in figure \ref{graph:optimal_q_graph} and table \ref{table:optimal_q_table}. However, due to time constraints, this test was run once. These results were not averaged over several experiments\footnote{As one may have noticed, the graph states that this experiment was run for two predators. This was not changed before running the test. However, these results are indeed of three predators versus one prey.}.
+
+\begin{center}
+	\includegraphics[scale=0.3]{q_learning_optimal_1000times5}
+	\captionof{figure}{Independent Q-learning: 3 predators vs. 1 prey, optimal settings}
+	\label{graph:optimal_q_graph}
+\end{center}
+
+The graph shows a significant difference with the previous test of three predators versus one prey. 
+
+\begin{table}[H]
+\begin{center}
+\begin{tabular}{| l | l | l | l | l |}
+\hline
+\parbox{2cm}{\textbf{$\epsilon$-rate}} & \parbox{2cm}{\textbf{Avg wins \\ (first 100)}} & \parbox{2cm}{\textbf{Avg losses \\ (first 100)}} & \parbox{2cm}{\textbf{Avg wins \\ (last 100)}} & \parbox{2cm}{\textbf{Avg losses \\ (last 100)}} \\
+\hline
+\textbf{Optimal} & 63 & 37 & 67 & 32 \\
+\hline
+\end{tabular}
+\caption{Average number of wins and losses by the predators with optimal values}
+\label{table:optimal_q_table}
+\end{center}
+\end{table}
+
+Table \ref{table:optimal_q_table} shows that the predators are winning in most episodes and this number has increased near the end of the experiment. This shows how powerful choosing the correct parameters is when implementing an algorithm.
