--- a/three/report/minimax_q.tex
+++ b/three/report/minimax_q.tex
@@ -1,4 +1,4 @@
-The problem with independent Q-learning is that it is based on a stationary environment, i.e. where the rules stay the same. However, in a Multi-agent environment where other agents learn as well, the environment is dynamic. This means that the guarantees that hold for single-agent learning do not hold in this setting. Littman \cite{Littman94markovgames} specifically considers two-player zero-sum games. In this type of Markov Game, it is possible to use a single reward function, that one player tries to \textit{maximize}, and the other (the opponent) tries to \textit{minimize}. For MDPs, there is a policy $\pi$ that is optimal. However, for Markov Games, there is often no \textit{undominated} policy\footnote{If a policy is dominated, that means a better policy exists}. The solution to this is to pick a policy and estimate its value by assuming the opponent will take the actions that are worst for the agents, with regards to this policy. In short, minimax picks the policy that maximizes the agent's reward in the worst case. This optimal policy can be stochastic, as seen in the policy for \textit{rock, paper, scissors} (where the best policy is being unpredictable so you cannot be exploited). To find the optimal policy $\pi^*$, linear programming can be used, where the value of a state is
+The problem with independent Q-learning is that it is based on a stationary environment, i.e. where the rules stay the same. However, in a Multi-agent environment where other agents learn as well, the environment is dynamic. This means that the convergence guarantees that hold for single-agent learning do not hold in this setting. Littman \cite{Littman94markovgames} specifically considers two-player zero-sum games. In this type of Markov Game, it is possible to use a single reward function, that one player tries to \textit{maximize}, and the other (the opponent) tries to \textit{minimize}. For MDPs, there is a policy $\pi$ that is optimal. However, for Markov Games, there is often no \textit{undominated} policy\footnote{If a policy is dominated, that means a better policy exists}. The solution to this is to pick a policy and estimate its value by assuming the opponent will take the actions that are worst for the agent, with regards to this policy. In short, minimax picks the policy that maximizes the agent's reward in the worst case. This optimal policy can be stochastic, as seen in the policy for \textit{rock, paper, scissors} (where the best policy is being unpredictable so you cannot be exploited). To find the optimal policy $\pi^*$, linear programming can be used, where the value of a state is
 \begin{mdframed}
 \begin{align}
 V(s) &= \underset{\pi \in PD(A)}{\text{max}} \underset{o \in O}{\text{min}} \sum_{a\in A} Q(s,a,o) \pi_a
