small report shit

--- a/three/report/future_work.tex
+++ b/three/report/future_work.tex
@@ -4,4 +4,4 @@ This section contains information about improvements in the future
 It has shown that the state space encoding has improved the performance of the program. However, in order to run tests with four predators on one grid, a smarter encoding is necessary. With a smarter state space encoding, it will be possible to run the program with up to four predators and this research can be completed. The smarter state space encoding will also allow multiple experiments to be run on grids with three or more predators. 
 
 \subsection{Grid size}
-All the tests were performed on an 11x11 grid. As it is believed that the predators bump into each other so much is because the grid is small, it is interesting to see how all agents learn on a larger grid. As stated before, this will significantly increase the state space of the implementation, leading to slow computation. In order to perform these tests, it is imperative to come up with smarter state space encoding. Then these tests can be executed and the effects of these learning algorithms can be evaluated.
+All the tests were performed on an 11x11 grid. As it is believed that the predators bump into each other so much because the grid is small, it is interesting to see how all agents learn on a larger grid. As stated before, this will significantly increase the state space of the implementation, leading to slow computation. In order to perform these tests, it is imperative to come up with smarter state space encoding. Then these tests can be executed and the effects of these learning algorithms can be evaluated.
