updated future work

--- a/three/report/bibliography.bib
+++ b/three/report/bibliography.bib
@@ -16,7 +16,7 @@
     publisher = {Morgan Kaufmann}
 }
 
-
+%Kanerva
 @inproceedings{wu2009function,
   title={Function Approximation Using Tile and Kanerva Coding For Multi-Agent Systems},
   author={Wu, Cheng and Meleis, Waleed},
@@ -45,3 +45,5 @@
   year={2001},
   organization={LAWRENCE ERLBAUM ASSOCIATES LTD}
 }
+
+
