--- a/three/report/bibliography.bib
+++ b/three/report/bibliography.bib
@@ -47,3 +47,13 @@
 }
 
 
+% Friend or Foe
+@inproceedings{littman2001friend,
+  title={Friend-or-foe Q-learning in general-sum games},
+  author={Littman, Michael L},
+  booktitle={ICML},
+  volume={1},
+  pages={322--328},
+  year={2001}
+}
+
